--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     我的网站
-    <a href="./my.html">王宇飞</a>
+    <ul>
+        <li>
+            <a href="./my.html">王宇飞</a>
+        </li>
+        <li>
+            <a href="./1.html">练习 什么是 HTML</a>
+        </li>
+    </ul>
 </body>
 </html>
