--- a/49.html
+++ b/49.html
@@ -9,5 +9,14 @@
 <body>
     <a href="http;//www.baidu.com.cn/"
     target="_blank">欢迎参观小网站</p>
+    
+    <h2>标题</h2>
+    <p>这是其中一个标题</p>
+    
+    <h2>标题</h2>
+    <p>这是另一个标题</p>
+
+    <h2>标题</h2>
+    <p>这是以上三个标题之一中的一个标题</p>
 </body>
 </html>
