我的第59个例子

--- a/超链接.html/35.html
+++ b/超链接.html/35.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../59.html">我的第59个文件</a>
+    <a href="../59.html">我的第59个例子</a>
 </body>
 </html>
