CSS响应式表格

--- a/css/130.html
+++ b/css/130.html
@@ -72,8 +72,7 @@ tr:nth-child(even){background-color: #f2f2f2;}
 <tr>
     <td>Elon</td>
     <td>Musk</td>
-    <td>67</td>
-    <td>67</td>
+    <td>67</std>
     <td>67</td>
     <td>67</td>
     <td>67</td>
