CSS创建并排图像

--- a/css/165.html
+++ b/css/165.html
@@ -37,7 +37,7 @@
   <img src="../w3logo-1.png" alt="Tulip" style="width:100%">
   </div>
   <div class="img-container">
-  <img src="../w3logo-1.png" alt="Flower" style="width:100%">
+  <img src="../w3logo-1.pngs" alt="Flower" style="width:100%">
   </div>
   </div>
 
