CSS创建web布局实例

--- a/css/168.html
+++ b/css/168.html
@@ -70,7 +70,7 @@
     <p>You will learn more about web layout and responsive 
     web pages in a later chapter.</p>
 </div>
-</div>
+</div>s
       
     <div class="footer">
     <p>Footer Text</p>
