--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
+    <u1>
+    <li>
+    <a href="css/1.html">CSS语法</a>
+    </li>
+    </u1>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <h2>学习HTML</h2>
 <u1>
   <li>
@@ -283,3 +297,5 @@
         <a href=css/>
 </body>
 </html>
+</body>
+</html>l
