--- a/css/201.html
+++ b/css/201.html
@@ -67,7 +67,7 @@
 </div>
 
 <div class="dropdown" style="float:right;">
-    <button class="dropbtn">Right</button>
+    <buttosn class="dropbtn">Right</button>
     <div class="dropdown-content">
     <a href="#">Link 1</a>
     <a href="#">Link 2</a>
