--- a/index.html
+++ b/index.html
@@ -91,3 +91,23 @@
          <a href="./html2/16.html">文字方向</a>
       </li>
    </u1>
+   <u1>
+      <li>
+         <a href="./html2/17.html">块引用</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/18.html">删除字效果和插入字效果</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/19.html">创建超级链接</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/20.html">将图像作为链接</a>
+      </li>
+   </u1>
