--- a/index.html
+++ b/index.html
@@ -111,3 +111,218 @@
          <a href="./html2/20.html">将图像作为链接</a>
       </li>
    </u1>
+   <u1>
+      <li>
+         <a href="./html2/21.html">在新的浏览器窗口打开链接</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/22.html">链接到同一个页面不同位置</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/23.html">跳出框架</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/24.html">创建电子邮件链接</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/25.html">创建电子邮件链接2</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/26.html">垂直框架</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/27.html">水平框架</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/28.html">如何使用noframes标签</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/29.html">混合框架结构</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/30.html">含有noresize=noresize属性的框架结构</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/31.html">表格</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/32.html">表格边框</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/33.html">没有边框的表格</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/34.html">表格中的表头（heading）</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/35.html">空单元格</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/36.html">带有标题的表格</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/37.html">跨行或者跨列的单元格</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/38.html">表格内的标签</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/39.html">单元格边距（call padding）</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/40.html">单元格间距（call spaceing）</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/41.html">向表格添加背景颜色或者背景图像</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/42.html">向表格单元添加背景颜色或者背景图像</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/43.html">在表格单元中添加内容</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/44.html">框架（frame）属性</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/45.html">无序列表</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/46.html">有序列表</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/47.html">不同类型的无序列表</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/48.html">不同类型的有序列表</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/49.html">嵌套列表</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/50.html">嵌套列表2</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/51.html">定义列表</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/52.html">文本域(text fields)</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/53.html">密码域</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/54.html">复选框</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/55.html">单选按钮</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/56.html">简单的下拉列表</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/57.html">另一个下拉列表</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/58.html">文本域（textarea）</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/59.html">创建按钮</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/60.html">fieldset  around data</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/61.html">带有输入框和确认按钮的表单</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/62.html">带有复选框的表单</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/63.html">带有单选按钮的表单</a>
+      </li>
+   </u1>
