--- a/index.html
+++ b/index.html
@@ -326,3 +326,121 @@
          <a href="./html2/63.html">带有单选按钮的表单</a>
       </li>
    </u1>
+   <u1>
+      <li>
+         <a href="./html2/64.html">从表单发送电子邮件</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/65.html">插入图像</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/66.html">从不同的位置插入图像</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/67.html">背景图像</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/68.html">排列图像</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/69.html">浮动图像</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/70.html">调整图像尺寸</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/71.html">把图像转换为图像映射</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/72.html">搭配良好的背景和颜色</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/73.html">搭配不好的背景和颜色</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/74.html">可用性强的背景图像</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/75.html">可用性强的背景图像2</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/76.html">可用性很差的背景图像</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/77.html">html样式</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/78.html">没有下划线的链接</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/79.html">链接到一个外部样式表</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/80.html">文档的标题</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/81.html">一个target 所有的链接</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/82.html">文档描述</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/83.html">文档的关键词</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/84.html">重定向</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/85.html">插入一段脚本</a>
+      </li>
+   </u1>
+   <u1>
+      <li>
+         <a href="./html2/86.html">运行于不支持脚本的浏览器</a>
+      </li>
+   </u1>
+   </body>
+   
+
