--- a/css/205.html
+++ b/css/205.html
@@ -62,8 +62,8 @@ media only screen and (max-width: 500px) {
 </div>
 <div class="responsive">
     <div class="gallery">
-    <a target="_blank" href="../w3logo-1.png">
-    <img src="../w3logo-1.png" alt="花花草草" width="600" height="400">
+    <a target="_blank" href="../图片/src=http---wx3.sinaimg.cn-large-8a533d85ly1frt4vaopxgj21hc0xcakt.jpg&refer=http---wx3.sinaimg.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg.jpg">
+    <img src="../图片/eg_venus.gif" alt="花花草草" width="600" height="400">
 </a>
 <div class="desc">在此处添加图像描述</div>
 </div>
