--- a/css/29.html
+++ b/css/29.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-<head>
+
 <style>
-body{
-    background: #ffffff url(../WechatIMG2.jpeg)no-repeat
-    right top;
-    margin-right: 200px;
+    body {
+        background: #ffffff url(../WechatIMG2.jpeg)no-repeat right top;
+        margin-right: 200px;
     }
 </style>
-</head>
+
 <body>
     <h1>background属性</h1>
     <p>background 属性是在一条声明中指定所有背景属性的简写属性</p>
     <p>在这里，背景图像只显示一次，并位于右上角</p>
     <p>我们还添加了右外边距，以使文本不会覆盖背景图片</p>
+
 </html>
