--- a/css/72.html
+++ b/css/72.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-<head>
+
+
 <style>
-    p{outline-color: green;}
-    P.dotted{outline-style: dotted;}
-    p.dashed {outline-style: dashed;}
-    p.solid {outline-style: solid;}
-    p.double {outline-style: double;}
-    p.groove {outline-style: groove;}
-    p.ridge {outline-style: ridge;}
-    p.inset {outline-style: inset;}
-    p.outset {outline-style: outset;}
+    p {
+        outline-color: green;
+    }
+
+    P.dotted {
+        outline-style: dotted;
+    }
+
+    p.dashed {
+        outline-style: dashed;
+    }
+
+    p.solid {
+        outline-style: solid;
+    }
+
+    p.double {
+        outline-style: double;
+    }
+
+    p.groove {
+        outline-style: groove;
+    }
+
+    p.ridge {
+        outline-style: ridge;
+    }
+
+    p.inset {
+        outline-style: inset;
+    }
+
+    p.outset {
+        outline-style: outset;
+    }
 </style>
-</head>
+
+
 <body>
     <h1>outline-style 属性</h1>
     <p class="dotted">点状轮廓</p>
@@ -33,4 +61,5 @@
 
 
 </body>
+
 </html>
