--- a/css/76.html
+++ b/css/76.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-<head>
+
+
 <style>
-p.ex1{outline: dashed;}
-p.ex2{outline: dotted red;}
-p.ex3{outline: 5px solid gray;}
-p.ex4{outline: thick ridge pink;}
+    p.ex1 {
+        outline: dashed;
+    }
+
+    p.ex2 {
+        outline: dotted red;
+    }
+
+    p.ex3 {
+        outline: 5px solid gray;
+    }
+
+    p.ex4 {
+        outline: thick ridge pink;
+    }
 </style>
-</head>
+
+
 <body>
     <h1>outline 属性</h1>
     <p class="ex1">点状轮廓。</p>
@@ -22,4 +35,5 @@ p.ex4{outline: thick ridge pink;}
     <p class="ex3">5 像素的黄色实线轮廓。</p>
     <p class="ex4">粗的粉色凸脊轮廓。</p>
 </body>
+
 </html>
