--- a/css/12.html
+++ b/css/12.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-<head>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
+
+
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <style>
-h1{
-    color: orange;
-}
+    h1 {
+        color: orange;
+    }
 </style>
-</head>
-<body>
-    <h1>这不是一个标题</h1>
-    <p>本文档的样式是外部样式表和内部样式的组合</p>
-</body>
-</html>
+
+<h1>这是一个标题</h1>
+<p>本文档的样式是外部样式表和内部样式的组合。</p>
