--- a/css/6.html
+++ b/css/6.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-<head>
+
+
+
+
 <style>
-p.center{ 
-    text-align: center;
-    color: pink;
-}
+    p.center {
+        text-align: center;
+        color: pink;
+    }
 
-p.large{
-    font-size: 300%;
-}
+    p.large {
+        font-size: 300%;
+    }
 </style>
-</head>
-<body>
 
-<h1 class="center">这个标签不受影响</h1>
-<p  class="center">这一段是红色并且居中的</p>
-<p  class="center large">这一段是红色居中对齐的并且使用大号字体</p>
+<body>s
+
+    <h1 class="center">这个标签不受影响</h1>
+    <p class="center">这一段是红色并且居中的</p>
+    <p class="center large">这一段是红色居中对齐的并且使用大号字体</p>
 </body>
+
 </html>
