--- a/index.html
+++ b/index.html
@@ -453,237 +453,201 @@
 <h1>学习css</h1>
 <u1>
    <li>
-      <a href="./css/1.html">css语法</a>
+      <a href="./CSS2/1.html">CSS语法</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/2.html">元素选择器</a>
+      <a href="./CSS2/2.html">元素选择器</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/3.html">id选择器</a>
+      <a href="./CSS2/3.html">ID选择器</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/4.html">类选择器（针对所有元素）</a>
+      <a href="./CSS2/4.html">类选择器(针对所有元素)</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/5.html">类选择器（只针对p元素）</a>
+      <a href="./CSS2/5.html">类选择器(针对p元素)</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/6.html">引用两个类的html元素</a>
+      <a href="./CSS2/6.html">引用两个类的html元素</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/7.html">通用 选择器</a>
+      <a href="./CSS2/7.html">通用选择器</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/8.html">分组 选择器</a>
+      <a href="./CSS2/8.html">分组选择器</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/9.html">外部CSS</a>
+      <a href="./CSS2/9.html">外部CSS</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/10.html">内部CSS</a>
+      <a href="./CSS2/10.html">内部CSS</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/11.html">行内CSS</a>
+      <a href="./CSS2/11.html">行内CSS</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/12.html">多个样式表</a>
+      <a href="./CSS2/12.html">多个样式表</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/13.html">层叠顺序</a>
+      <a href="./CSS2/13.html">层叠顺序</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/13.html">层叠顺序</a>
+      <a href="./CSS2/14.html">单行注释</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/14.html">单行注释</a>
+      <a href="./CSS2/15.html">多行注释</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/15.html">多行注释</a>
+      <a href="./CSS2/16.html">设置颜色和背景色</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/16.html">设置颜色的背景色</a>
+      <a href="./CSS2/17.html">设置文本颜色</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/17.html">设置文本颜色</a>
+      <a href="./CSS2/18.html">设置边框颜色</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/18.html">设置边框颜色</a>
+      <a href="./CSS2/19.html">设置RGB值</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/19.html">设置不同的颜色值</a>
+      <a href="./CSS2/20.html">设置HEX值</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/20.html">设置RGB值</a>
+      <a href="./CSS2/21.html">设置HSL值</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/21.html">设置HEX值</a>
+      <a href="./CSS2/22.html">设置页面的背景色</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/22.html">设置HSL值</a>
+      <a href="./CSS2/23.html">设置不同元素的的背景色</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/23.html">设置不同元素的背景色</a>
+      <a href="./CSS2/24.html">把图像设置为页面背景</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/24.html">把图像设置为页面背景</a>
+      <a href="./CSS2/25.html">如何只在水平方向重复背景图像</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/25.html">如何只在水平方向重复背景图像</a>
+      <a href="./CSS2/26.html">如何定位背景图像</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/26.html">如何定位背景图像</a>
+      <a href="./CSS2/27.html">固定的背景图像(该图像不会随着页面的其余部分滚动)</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/27.html">固定的背景图像（该图像不会随着页面的其余部分滚动）</a>
+      <a href="./CSS2/28.html">所有背景属性都在一条声明中</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/28.html">所有的背景属性在一条声明中</a>
+      <a href="./CSS2/29.html">高级背景实例</a>
    </li>
 </u1>
 <u1>
    <li>
-      <a href="./css/29.html">高级背景实例</a>
+      <a href="./CSS2/30.html">设置四条边框的宽度</a>
    </li>
 </u1>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
+<u1>
+   <li>
+      <a href="./CSS2/31.html">设置上边框的宽度</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/32.html">设置下边框的宽度</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/33.html">设置左边框的宽度</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/34.html">设置右边框的宽度</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/35.html">设置四条边框的样式</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/36.html">设置上边框的样式</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/37.html">设置下边框的样式</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/38.html">设置左边框的样式</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/39.html">设置右边框的样式</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/40.html">设置四条边框的颜色</a>
+   </li>
+</u1>
