--- a/index.html
+++ b/index.html
@@ -651,3 +651,167 @@
       <a href="./CSS2/40.html">设置四条边框的颜色</a>
    </li>
 </u1>
+<u1>
+   <li>
+      <a href="./CSS2/41.html">设置上边框的颜色</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/42.html">设置下边框的颜色</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/43.html">设置左边框的颜色</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/44.html">设置右边框的颜色</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/45.html">所有边框属性在一条声明中</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/46.html">为元素添加圆角</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/46.html">为元素添加圆角</a>
+   </li>
+<u1>
+   <li>
+      <a href="./CSS2/47.html">为每个边设置不同的边框</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/48.html">所有上边框属性在一条声明中</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/49.html">所有下边框属性在一条声明中</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/50.html">所有左边框属性在一条声明中</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/51.html">所有右边框属性在一条声明中</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/52.html">为元素的各边规定不同的外边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/53.html">使用带有4个值的简写margin属性</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/54.html">使用带有3个值的简写margin属性</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/55.html">使用带有2个值的简写margin属性</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/56.html">使用带有1个值的简写margin属性</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/57.html">把外边距设置为auto,来居中其容器内的元素</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/58.html">让左外边距继承父元素</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/59.html">外边距合并</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/60.html">为元素的各边规定不同的内边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/61.html">使用带有四个值的简写内边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/62.html">使用带有三个值的简写内边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/63.html">使用带有二个值的简写内边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/64.html">使用带有一个值的简写内边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/65.html">内边距和元素宽度(不设置box-sizing)</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/66.html">内边距和元素宽度(设置box-sizing)</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/67.html">设置元素的左内边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/68.html">设置元素的右内边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/69.html">设置元素的上内边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/70.html">设置元素的下内边距</a>
+   </li>
+</u1>
+<u1>
+   <li>
+      <a href="./CSS2/71.html">设置元素的宽度和高度</a>
+   </li>
+</u1>
+u1>
+   <li>
+      <a href="./CSS2/72.html">设置元素的最大宽度</a>
+   </li>
+</u1>
