--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 
 
 <body>
+   <h2>学习 Flex 布局</h2>
+   <ul>
+      <li>
+         <a href="./flex/1.html">学习 flex-direction 属性</a>
+      </li>
+      <li>
+         <a href="./flex/2.html">学习 flex-wrap 属性</a>
+      </li>
+   </ul>
+
    <h2>学习HTML</h2>
    <ul>
       <li>
