--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <li>
          <a href="./flex/2.html">学习 flex-wrap 属性</a>
       </li>
+      <li>
+         <a href="./flex/3.html">学习 justify-content 属性</a>
+      </li>
    </ul>
 
    <h2>学习HTML</h2>
