--- a/flex/4.html
+++ b/flex/4.html
@@ -14,23 +14,23 @@
         }
 
         .box1 {
-            justify-content: flex-start;
+            align-items: flex-start;
         }
 
         .box2 {
-            justify-content: flex-end;
+            align-items: flex-end;
         }
 
         .box3 {
-            justify-content: center;
+            align-items: center;
         }
 
         .box4 {
-            justify-content: space-between;
+            align-items: baseline;
         }
 
-        .box4 {
-            justify-content: space-around;
+        .box5 {
+            align-items: stretch;
         }
 
         .block {
@@ -63,6 +63,12 @@
             <div class="block">4</div>
         </div>
         <div class="box box4">
+            <div class="block">1</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+            <div class="block">4</div>
+        </div>
+        <div class="box box5">
             <div class="block">1</div>
             <div class="block">2</div>
             <div class="block">3</div>
