--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
       <li>
          <a href="./flex/3.html">学习 justify-content 属性</a>
       </li>
+      <li>
+         <a href="./flex/4.html">学习 align-items 属性</a>
+      </li>
+      <li>
+         <a href="./flex/5.html">学习 align-content 属性</a>
+      </li>
+      <li>
+         <a href="./flex/6.html">学习 order 属性</a>
+      </li>
    </ul>
 
    <h2>学习HTML</h2>
@@ -378,6 +387,7 @@
          <a href="./html2/86.html">运行于不支持脚本的浏览器</a>
       </li>
    </ul>
+
    <h1>学习css</h1>
    <ul>
       <li>
@@ -779,8 +789,6 @@
          <a href="./CSS2/101.html">以百分百和em为单位设置字体大小</a>
       </li>
    </ul>
+
 </body>
-
-
-
 </html>
