--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          <a href="./flex/5.html">学习 align-content 属性</a>
       </li>
       <li>
-         <a href="./flex/6.html">学习 order 属性</a>
+         <a href="./flex/6.html">学习 orders属性</a>
       </li>
    </ul>
 
