--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <li>
          <a href="./flex/6.html">学习 orders属性</a>
       </li>
+      <li>
+         <a href="./flex/7.html">学习 flex-grow 属性</a>
+      </li>
    </ul>
 
    <h2>学习HTML</h2>
