--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <li>
          <a href="./flex/7.html">学习 flex-grow 属性</a>
       </li>
+      <li>
+         <a href="./flex/8.html">学习 </a>
+      </li>
    </ul>
 
    <h2>学习HTML</h2>
