--- a/flex/7.html
+++ b/flex/7.html
@@ -7,28 +7,51 @@
     <title>Document</title>
 <style>
     .box{
-        display: flex;
-        border: 1px solid red;
+        display:flex;
+        border: 1px solid black;
         margin: 10px;
     }
-    .box1{
-        flex-grow: number;
+    s
+    .box2{
+        flex-grow:1;
     }
+
+    .box3{
+        flex-grow:2;
+    }
+
+    .box4{
+        flex-grow: 3;
+    }
+
     .block{
-        background-color: red;
         height: 100px;
         width: 100px;
         margin: 10px;
+        background-color:red;
     }
 </style>
 </head>
 <body>
-    <div>
-        <div  class="box box1">
-            <div  class="block">1</div>
-            <div  class="block">12</div>
-            <div  class="block">3</div>
-        </div>
+    <div id="box" class="box box1">
+        <div class="block">1</div>
+        <div  class="block">2</div>
+        <div class="block">3</div>
+    </div>
+    <div id="box"  class="box box2">
+        <div class="block">1</div>
+        <div  class="block">2</div>
+        <div class="block">3</div>
+    </div>
+    <div id="box"  class="box box3">
+        <div class="block">1</div>
+        <div  class="block">2</div>
+        <div class="block">3</div>
+    </div>
+    <div id="box"  class="box box4">
+        <div class="block">1</div>
+        <div  class="block">2</div>
+        <div class="block">3</div>
     </div>
 </body>
 </html>
