--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          <a href="./flex/7.html">学习 flex-grow 属性</a>
       </li>
       <li>
-         <a href="./flex/8.html">学习 </a>
+         <a href="./flex/8.html">学习 align-self 属性</a>
       </li>
    </ul>
 
