--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
       <li>
          <a href="./flex/8.html">学习 align-self 属性</a>
       </li>
+      <li>
+         <a href="./flex/9.html">学习 flex-basis 属性</a>
+      </li>
+      <li>
+         <a href="./flex/10.html">学习 flex 属性</a>
+      </li>
    </ul>
 
    <h2>学习HTML</h2>
