--- a/flex/2.html
+++ b/flex/2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title>x
     <style>
         .box {
             display: flex;
@@ -19,9 +19,9 @@
         }
         .box3 {
             flex-wrap: wrap-reverse;
-        }
+        } 
         .block {
-            background-color: red;
+            background-color: red;  
             height: 100px;
             width: 100px;
             margin: 10px;
