--- a/flex/10.html
+++ b/flex/10.html
@@ -1,48 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<style>
-    .box{
-        display: flex;
-        border: 1px solid black;
-        margin: 10px;
-    }
-    .box1{
-        flex: auto;
-    }
-    .box2{
-        flex: 0 0 auto;
-    }
-    .box3{
-        flex: 1 1 auto;
-    }
-    .block{
-        background-color: red;  
-        height: 100px;
-        width: 100px;
-        margin: 10px;
-    }
-</style>
+    <style>
+        #blpol {
+            display: flex;
+            border: 1px solid black;
+            margin: 10px;
+        }
+
+        .box1 {
+            flex: auto;
+        }
+
+        .box2 {
+            flex: 0 0 auto;
+        }
+
+        .box3 {
+            flex: 1 1 auto;
+        }
+
+        .block {
+            background-color: red;
+            height: 100px;
+            width: 100px;
+            margin: 10px;
+        }
+    </style>
 </head>
+
 <body>
-    <div class="box box1">
-        <div  class="block">1</div>
-        <div  class="block">2</div>
-        <div class="block">3</div>
+    <div id="blpol">
+        <div class="box box1">
+            <div class="block">1</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+        </div>
     </div>
-    <div class="box box2">
-        <div  class="block">1</div>
-        <div  class="block">2</div>
-        <div class="block">3</div>
+    <div id="blpol">
+        <div class="box box2">
+            <div class="block">1</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+        </div>
     </div>
-    <div class="box box3">
-        <div  class="block">1</div>
-        <div  class="block">2</div>
-        <div class="block">3</div>
+    <div id="blpol">
+        <div class="box box3">
+            <div class="block">1</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+        </div>
     </div>
 </body>
+
 </html>
