--- a/flex/10.html
+++ b/flex/10.html
@@ -16,15 +16,6 @@
         .box1 {
             flex: auto;
         }
-
-        .box2 {
-            flex: 0 0 auto;
-        }
-
-        .box3 {
-            flex: 1 1 auto;
-        }
-
         .block {
             background-color: red;
             height: 100px;
@@ -33,28 +24,13 @@
         }
     </style>
 </head>
-
 <body>
     <div id="blpol">
-        <div class="box box1">
-            <div class="block">1</div>
-            <div class="block">2</div>
-            <div class="block">3</div>
-        </div>
-    </div>
-    <div id="blpol">
-        <div class="box box2">
-            <div class="block">1</div>
-            <div class="block">2</div>
-            <div class="block">3</div>
-        </div>
-    </div>
-    <div id="blpol">
-        <div class="box box3">
-            <div class="block">1</div>
-            <div class="block">2</div>
-            <div class="block">3</div>
-        </div>
+        <div class="box box1"></div>
+        <div class="block">1</div>
+        <div class="block">2</div>
+        <div class="block">3</div>
+
     </div>
 </body>
 
