--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <li>
          <a href="./flex/10.html">学习 flex 属性</a>
       </li>
+      <li>
+         <a href="./flex/11.html">学习 flex-shrink 属性</a>
+      </li>
    </ul>
 
    <h2>学习HTML</h2>
