--- a/flex/11.html
+++ b/flex/11.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<title>Document</title>
 <style>
 #content {
   display: flex;
@@ -11,25 +11,22 @@
  
 #content div {
   flex-basis: 120px;
-  border: 3px solid rgba(0,0,0,.2);
+  border: 1px solid black;
 }
  
-.box { 
-  flex-shrink: 1;
-}
- 
-.box1 { 
+.block{ 
   flex-shrink: 2; 
+  flex-shrink: 1;
 }
 </style>
 </head>
 <body>
 <div id="content">
-  <div class="box" style="background-color:red;">A</div>
-  <div class="box" style="background-color:lightblue;">B</div>
-  <div class="box" style="background-color:yellow;">C</div>
-  <div class="box1" style="background-color:brown;">D</div>
-  <div class="box1" style="background-color:lightgreen;">E</div>
+  <div class="block" style="background-color:red;">A</div>
+  <div class="block" style="background-color:red;">B</div>
+  <div class="block" style="background-color:red;">C</div>
+  <div class="block" style="background-color:red;">D</div>
+  <div class="block" style="background-color:red;">E</div>
 </div>
 
 </body>
