--- a/flex/11.html
+++ b/flex/11.html
@@ -14,9 +14,11 @@
   border: 1px solid black;
 }
  
-.block{ 
-  flex-shrink: 2; 
+.block{
   flex-shrink: 1;
+}
+.block1{
+    flex-shrink: 2;
 }
 </style>
 </head>
@@ -24,9 +26,9 @@
 <div id="content">
   <div class="block" style="background-color:red;">A</div>
   <div class="block" style="background-color:red;">B</div>
-  <div class="block" style="background-color:red;">C</div>
-  <div class="block" style="background-color:red;">D</div>
-  <div class="block" style="background-color:red;">E</div>
+  <div class="block1" style="background-color:red;">C</div>
+  <div class="block1" style="background-color:red;">D</div>
+  <div class="block1" style="background-color:red;">E</div>
 </div>
 
 </body>
