--- a/flex/11.html
+++ b/flex/11.html
@@ -24,11 +24,11 @@
 </head>
 <body>
 <div id="content">
-  <div class="block" style="background-color:red;">A</div>
-  <div class="block" style="background-color:red;">B</div>
-  <div class="block1" style="background-color:red;">C</div>
-  <div class="block1" style="background-color:red;">D</div>
-  <div class="block1" style="background-color:red;">E</div>
+  <div class="block" style="background-color:red;">1</div>
+  <div class="block" style="background-color:red;">2</div>
+  <div class="block1" style="background-color:red;">3</div>
+  <div class="block1" style="background-color:red;">4</div>
+  <div class="block1" style="background-color:red;">5</div>
 </div>
 
 </body>
