--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,18 @@
         <div class="time-right">
             最后更新于2020年9月
         </div>
+        <div  class="clear"style="clear: both;">
+        </div>
+    </div>
+
+
+    <div  class="l juzhong">
+        <div class="name">
+            <div class="wang">
+             <div>王宇飞</div>
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
