--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,10 @@
             <div class="wang">
              <div>王宇飞</div>
             </div>
-
+            
+            <div class="job-q">
+                <div>前端开发工程师</div>
+            </div>
         </div>
     </div>
 </body>
