--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,29 +8,49 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style2.css" />
 </head>
+
 <body>
-    <div class="dingbu  juzhong">
+    <div class="dingbu  juzhong" style="display: flex;justify-content: space-between;">
         <div class="PDF-left">
             下载pdf
         </div>
         <div class="time-right">
             最后更新于2020年9月
         </div>
-        <div  class="clear"style="clear: both;">
-        </div>
     </div>
 
 
-    <div  class="l juzhong">
+    <div class="l juzhong">
         <div class="name">
             <div class="wang">
-             <div>王宇飞</div>
+                <div>王宇飞</div>
             </div>
-            
             <div class="job-q">
                 <div>前端开发工程师</div>
             </div>
         </div>
+        <div class="xian">
+            <div class="yu"></div>
+        </div>
+        <div class="o">
+            <div class="wo">
+                <div class="nan">
+                    <div>男/2001.7</div>
+                    <div>罗田理工中等专业学校</div>
+                    <div>高中.会计</div>
+                </div>
+                <div class="job-n">
+                    <div class="boke">
+                        <div class="boke-link">我的技术博客</div>
+                        <div class="boke-lianjie">我的代码</div>
+                        <div class="hotmail">1758555877@qq.com</div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
+
 </html>
