--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,6 @@
         </div>
     </div>
 
-
     <div class="l juzhong">
         <div class="name">
             <div class="wang">
@@ -50,7 +49,12 @@
             </div>
         </div>
     </div>
+
+    <div class="juzhong baise"style="padding-top:20px;">
+
     </div>
+
+    
 </body>
 
 </html>
