--- a/index2.html
+++ b/index2.html
@@ -82,7 +82,6 @@
                         <div class="item-des">
                             <li style="margin-bottom: 8px;">负责支付宝后台微服务框架</li>
                             <li style="margin-bottom: 8px;">负责支付宝商家平台业务前端</li>
-                            <div class="clear"></div>
                         </div>
                     </div>
                 </div>
@@ -114,7 +113,6 @@
                             <li>主导和开发团队基础UI组件库，支撑业务快速迭代，统一视觉规范</li>
                             <li>报表项目主R，设计河开发报表框架提升报表开发效率，跟进项目迭代和任务分配</li>
                             <li>推进ReactNative再管家App中的落地，打通RN2Web</li>
-                            <div class="clear"></div>
                         </div>
                     </div>
                 </div>
@@ -123,7 +121,7 @@
                     <div class="jobname">
                         <div class="itemname">腾讯科技(深圳)</div>
                         <div class="item-time">2015-2017</div>
-                        <a class="link-icon" href="https://www.tencent.com/zh-cn/index.html">
+                        <a class="link" href="https://www.tencent.com/zh-cn/index.html">
 
                             <svg t="1609060562334" class="icon" viewBox="0 0 1024 1024" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg" p-id="8107" width="30" height="30">
@@ -162,7 +160,6 @@
                         <li>负责前端质量监控与上报系统维护，参与Nodejs服务框架开发</li>
                         <li>探索在线课堂前沿录播河直播技术</li>
                         <li>参与桌面端，移动端，微信公众号，Wwindows客户端内嵌H5页的开发与优化</li>
-                        <div class="clear" style="clear:both;"></div>
                     </div>
                 </div>
             </div>
