--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@
     <div class="juzhong baise" style="padding-top:20px;">
         <div class="mao">
             <div class="ms">
-                <div class="left OP">
+                <div class="left OP"style="padding: 10px;">
                     <div class="title">
                         <div class="xian-left"></div>
                         <div class="sub">工作经历</div>
@@ -325,7 +325,7 @@
                         <div class="pol">
                             <div class="item-name">Web</div>
                             <div class="item-time"></div>
-                            <div class="item-des">
+                            <div class="itemdes">
                                 <li>熟悉了解JS基本语法与知识，掌握最新ES6语法与API熟练Type Script</li>
                                 <li>掌握网页重构所需的CSS，SCSS</li>
                                 <li>熟练React.会用Vue.Angular</li>
@@ -348,7 +348,7 @@
                                 <div class="item-time"></div>
                                 <div class="item-job">
                                 </div>
-                                <div class="item-des">
+                                <div class="itemdes">
                                     <li>用React开发大型复杂应用，熟悉了解React原理与生态技术经验丰富</li>
                                     <li>掌握React调试，性能优化，同构，ReactNative扩展技能</li>
                                 </div>
@@ -371,7 +371,7 @@
                         <div class="nodejs">
                             <div class="name-item">Nodejs</div>
                             <div class="item-time"></div>
-                            <div class="item-des">
+                            <div class="itemdes">
                                 <li>掌握Nodejs标准库以及模型，在实际项目中多处使用Nodejs</li>
                                 <li>用Nodejs开发过服务中间件与其他构建工具</li>
                             </div>
@@ -384,7 +384,7 @@
                         <div class="lop">
                             <div class="job-name">
                                 <div class="item-name">Golang</div>
-                                <div class="item-des">
+                                <div class="itemdes">
                                     <li>掌握golang基本语法与标准库</li>
                                     <li>用golang开发过多个服务与库</li>
                                 </div>
@@ -396,7 +396,7 @@
                                 <div class="jobname">
                                     <div class="name-12">网络协议</div>
                                 </div>
-                                <div class="item-des">
+                                <div class="itemdes">
                                     <li>
                                         <a href="https://github.com/gwuhaolin/blog/issues/12"
                                             class="zhifubao">掌握互联网基本运行机制，TCP与UDP协议</a>
@@ -409,7 +409,7 @@
                         <div class="webpack">
                             <div class="job-nam">
                                 <div class="item-name">音视频</div>
-                                <div class="item-des">
+                                <div class="itemdes">
                                     <li>
                                         <a href="https://github.com/gwuhaolin/blog/issues/3"
                                             class="zhifubao">掌握音视频基础概念编解码只是与常见音视频传输协议</a>
@@ -424,7 +424,7 @@
                         <div class="nodejs">
                             <div class="job-name">
                                 <div class="item-name">数据库</div>
-                                <div class="item-des">
+                                <div class="itemdes">
                                     <li>
                                         <a href="https://github.com/gwuhaolin/blog/issues/25"
                                             class="zhifubao">掌握关系型数据库基本概念与SOL，了解数据库性能优化方法</a>
