--- a/index2.html
+++ b/index2.html
@@ -444,6 +444,9 @@
         </div>
     </div>
     </div>
+    <div class="last">
+        <a class="footlink"href="https://www.bilibili.com/video/BV1px411i7o2/?p=2&spm_id_from=pageDriver">页面托管在Github上</a>
+    </div>
 
 </body>
 
