--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,6 @@
                         <div class="boke-link">我的技术博客</div>
                         <div class="boke-lianjie">我的代码</div>
                         <div class="hotmail">1758555877@qq.com</div>
-                        <div class="clear"></div>
                     </div>
                 </div>
             </div>
@@ -212,7 +211,6 @@
                                         <a href="https://github.com/gwuhaolin/blog/issues/2"
                                             class="zhifubao">webpack2终极优化</a>
                                     </li>
-                                    <div class="clear"></div>
                                 </div>
                             </div>
 
@@ -445,7 +443,8 @@
     </div>
     </div>
     <div class="last">
-        <a class="footlink"href="https://www.bilibili.com/video/BV1px411i7o2/?p=2&spm_id_from=pageDriver">页面托管在Github上</a>
+        <a class="footlink"
+            href="https://www.bilibili.com/video/BV1px411i7o2/?p=2&spm_id_from=pageDriver">页面托管在Github上</a>
     </div>
 
 </body>
