--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="dingbu  juzhong" style="display: flex;justify-content: space-between;">
+    <div class="dingbu  juzhong">
         <div class="PDF-left">
             下载pdf
         </div>
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <div class="juzhong baise" style="padding-top:20px;">
+    <div class="juzhong baise">
         <div class="mao">
             <div class="ms">
                 <div class="left OP" style="padding: 10px;">
@@ -397,7 +397,7 @@
                         <div class="react">
                             <div class="qq">
                                 <div class="jobname">
-                                    <div class="name-12">网络协议</div>
+                                    <div class="name-s">网络协议</div>
                                 </div>
                                 <div class="itemdes">
                                     <li>
