--- a/flex/4.html
+++ b/flex/4.html
@@ -11,8 +11,11 @@
             display: flex;
             border: 1px solid black;
             margin: 10px;
-        }
 
+        }
+        .box6{
+            align-items: auto;
+        }
         .box1 {
             align-items: flex-start;
         }
@@ -43,7 +46,12 @@
 </head>
 
 <body>
-    <div>
+        <div class="box box6">
+            <div class="block">1</div>
+            <div class="block">2</div>
+            <div class="block">3</div>
+            <div class="block">4</div>
+        </div>
         <div class="box box1">
             <div class="block">1</div>
             <div class="block">2</div>
@@ -74,7 +82,6 @@
             <div class="block">3</div>
             <div class="block">4</div>
         </div>
-    </div>
 </body>
 
 </html>
