--- a/float.html
+++ b/float.html
@@ -7,31 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #blpol {
-            display: flex;
+        .tex {
             border: 1px solid black;
             margin: 10px;
         }
         
-        .box1 {
-            flex: auto;
+        .text {
+            float: right;
         }
         
-        .block {
-            background-color: red;
-            height: 100px;
-            width: 100px;
-            margin: 10px;
+        .text1 {
+            float: left;
         }
     </style>
 </head>
 
 <body>
-    <div id="blpol">
-        <div class="box box1"></div>
-        <div class="block">1</div>
-        <div class="block">2</div>
-        <div class="block">3</div>
+    <div class="tex text">
+        <p>text</p>
+    </div>
+    <div class="tex text1">
+        <p>text2</p>
     </div>
 </body>
 
