--- a/index.html
+++ b/index.html
@@ -367,7 +367,6 @@
             </li>
         </ul>
     </div>
-
     <div class="css" style="padding-top: 2px;">
         <h1>学习css</h1>
         <ul>
@@ -813,7 +812,7 @@
         </ul>
     </div>
     <div class="float">
-        <h2>学习float</h2>
+        <h2 style="width: 100px;">学习float</h2>
         <ul>
             <li>
                 <a href="./float.html">float</a>
