--- a/float.html
+++ b/float.html
@@ -25,9 +25,11 @@
 <body>
     <div class="tex text">
         <p>text</p>
+        <div class="clear" style="clear:both;"></div>
     </div>
     <div class="tex text1">
         <p>text2</p>
+        <div class="clear" style="clear:both;"></div>
     </div>
 </body>
 
