--- a/index.html
+++ b/index.html
@@ -819,7 +819,14 @@
             </li>
         </ul>
     </div>
-
+    <div class="heibai">
+        <h2>学习html+css通过按钮切换黑白模式</h2>
+        <ul>
+            <li>
+                <a href="./demo(3)(1).html">学习html css 通过按钮切换黑白模式</a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
