--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             background: pink;
             transition: 0.3s;
             width: 20%;
+            line-height: 21px;
         }
         
         .css:hover {
