--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
         h1 {
             margin: 0;
             font-size: 20px;
+            transition: 0.3s;
             font-weight: 300;
+        }
+        
+        h1 {
+            color: violet;
         }
         
         .css {
