--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             font-weight: 300;
         }
         
-        h1 {
+        h1:hover {
             color: violet;
         }
         
