--- a/index.html
+++ b/index.html
@@ -930,6 +930,11 @@
                 <a href="./demo(3)(1).html">黑白模式</a>
             </li>
         </ul>
+        <ul>
+            <li>
+                <a href="./demo(1).html">黑白模式</a>
+            </li>
+        </ul>
         <div class="clear"></div>
     </div>
 </body>
