--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
         </ul>
         <ul>
             <li>
-                <a href="./Blackandwhitethemeswitch.html">黑白模式切换</a>
+                <a href="./demo1.html">黑白模式切换</a>
             </li>
         </ul>
         <div class="clear"></div>
