--- a/demo1.html
+++ b/demo1.html
@@ -54,8 +54,12 @@
             fill: var(--nav-color)
         }
         
-        .icon-1 {
+        .icon {
             display: none;
+        }
+        
+        .icon:hover {
+            display: block;
         }
     </style>
 </head>
