--- a/demo1.html
+++ b/demo1.html
@@ -58,7 +58,7 @@
             display: none;
         }
         
-        .icon:hover {
+        .icon {
             display: block;
         }
     </style>
