黑白转换程雪

--- a/demo1.html
+++ b/demo1.html
@@ -53,6 +53,10 @@
         .theme-switch svg {
             fill: var(--nav-color)
         }
+        
+        .light {
+            display: none;
+        }
     </style>
 </head>
 
