--- a/demo1.html
+++ b/demo1.html
@@ -48,6 +48,8 @@
         
         body {
             background-color: var(--bg-color);
+            margin: 10px;
+            transition: 1s;
         }
         
         .theme-switch svg {
